<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
       android:text="@string/major_chords_text_view"
       android:textSize="20sp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/amaj"
            android:textAllCaps="false"
            android:background="@color/colorAccent"
            android:onClick="onGuitarInteraction"
            android:id="@+id/amaj_button"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/as_maj"
            android:textAllCaps="false"
            android:background="@color/colorAccent"
            android:onClick="onGuitarInteraction"
            android:id="@+id/asmaj_button"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/bmaj"
            android:textAllCaps="false"
            android:background="@color/colorAccent"
            android:onClick="onGuitarInteraction"
            android:id="@+id/bmaj_button"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/cmaj"
            android:textAllCaps="false"
            android:background="@color/colorAccent"
            android:onClick="onGuitarInteraction"
            android:id="@+id/cmaj_button"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/cs_maj"
            android:textAllCaps="false"
            android:background="@color/colorAccent"
            android:onClick="onGuitarInteraction"
            android:id="@+id/csmaj_button"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/dmaj"
            android:textAllCaps="false"
            android:background="@color/colorAccent"
            android:onClick="onGuitarInteraction"
            android:id="@+id/dmaj_button"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/ds_maj"
            android:textAllCaps="false"
            android:background="@color/colorAccent"
            android:onClick="onGuitarInteraction"
            android:id="@+id/dsmaj_button"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/emaj"
            android:textAllCaps="false"
            android:background="@color/colorAccent"
            android:onClick="onGuitarInteraction"
            android:id="@+id/emaj_button"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/fmaj"
            android:textAllCaps="false"
            android:background="@color/colorAccent"
            android:onClick="onGuitarInteraction"
            android:id="@+id/fmaj_button"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/fs_maj"
            android:textAllCaps="false"
            android:background="@color/colorAccent"
            android:onClick="onGuitarInteraction"
            android:id="@+id/fsmaj_button"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/gmaj"
            android:textAllCaps="false"
            android:background="@color/colorAccent"
            android:onClick="onGuitarInteraction"
            android:id="@+id/gmaj_button"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/gs_maj"
            android:textAllCaps="false"
            android:background="@color/colorAccent"
            android:onClick="onGuitarInteraction"
            android:id="@+id/gsmaj_button"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/minor_chords_text_view"
        android:textSize="20sp"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/amin"
            android:textAllCaps="false"
            android:background="@color/colorPrimary"
            android:onClick="onGuitarInteraction"
            android:id="@+id/amin_button"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/as_min"
            android:textAllCaps="false"
            android:background="@color/colorPrimary"
            android:onClick="onGuitarInteraction"
            android:id="@+id/asmin_button"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/bmin"
            android:textAllCaps="false"
            android:background="@color/colorPrimary"
            android:onClick="onGuitarInteraction"
            android:id="@+id/bmin_button"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/cmin"
            android:textAllCaps="false"
            android:background="@color/colorPrimary"
            android:onClick="onGuitarInteraction"
            android:id="@+id/cmin_button"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/cs_min"
            android:textAllCaps="false"
            android:background="@color/colorPrimary"
            android:onClick="onGuitarInteraction"
            android:id="@+id/csmin_button"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/dmin"
            android:textAllCaps="false"
            android:background="@color/colorPrimary"
            android:onClick="onGuitarInteraction"
            android:id="@+id/dmin_button"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/ds_min"
            android:textAllCaps="false"
            android:background="@color/colorPrimary"
            android:onClick="onGuitarInteraction"
            android:id="@+id/dsmin_button"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/emin"
            android:textAllCaps="false"
            android:background="@color/colorPrimary"
            android:onClick="onGuitarInteraction"
            android:id="@+id/emin_button"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/fmin"
            android:textAllCaps="false"
            android:background="@color/colorPrimary"
            android:onClick="onGuitarInteraction"
            android:id="@+id/fmin_button"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/fs_min"
            android:textAllCaps="false"
            android:background="@color/colorPrimary"
            android:onClick="onGuitarInteraction"
            android:id="@+id/fsmin_button"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/gmin"
            android:textAllCaps="false"
            android:background="@color/colorPrimary"
            android:onClick="onGuitarInteraction"
            android:id="@+id/gmin_button"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/gs_min"
            android:textAllCaps="false"
            android:background="@color/colorPrimary"
            android:onClick="onGuitarInteraction"
            android:id="@+id/gsmin_button"/>
    </LinearLayout>
</LinearLayout>