<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/bass_guitar"
        android:textSize="20sp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/a"
            android:textAllCaps="false"
            android:background="@color/colorAccent"
            android:onClick="onBassInteraction"
            android:id="@+id/ab_button"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/as"
            android:textAllCaps="false"
            android:background="@color/colorAccent"
            android:onClick="onBassInteraction"
            android:id="@+id/asb_button"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/b"
            android:textAllCaps="false"
            android:background="@color/colorAccent"
            android:onClick="onBassInteraction"
            android:id="@+id/bb_button"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/c"
            android:textAllCaps="false"
            android:background="@color/colorAccent"
            android:onClick="onBassInteraction"
            android:id="@+id/cb_button"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/cs"
            android:textAllCaps="false"
            android:background="@color/colorAccent"
            android:onClick="onBassInteraction"
            android:id="@+id/csb_button"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/d"
            android:textAllCaps="false"
            android:background="@color/colorAccent"
            android:onClick="onBassInteraction"
            android:id="@+id/db_button"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/ds"
            android:textAllCaps="false"
            android:background="@color/colorAccent"
            android:onClick="onBassInteraction"
            android:id="@+id/dsb_button"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/e"
            android:textAllCaps="false"
            android:background="@color/colorAccent"
            android:onClick="onBassInteraction"
            android:id="@+id/eb_button"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/f"
            android:textAllCaps="false"
            android:background="@color/colorAccent"
            android:onClick="onBassInteraction"
            android:id="@+id/fb_button"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/fs"
            android:textAllCaps="false"
            android:background="@color/colorAccent"
            android:onClick="onBassInteraction"
            android:id="@+id/fsb_button"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/g"
            android:textAllCaps="false"
            android:background="@color/colorAccent"
            android:onClick="onBassInteraction"
            android:id="@+id/gb_button"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/gs"
            android:textAllCaps="false"
            android:background="@color/colorAccent"
            android:onClick="onBassInteraction"
            android:id="@+id/gsb_button"/>
    </LinearLayout>
</LinearLayout>